fix fab on mobile

--- a/css/fab.css
+++ b/css/fab.css
@@ -22,6 +22,7 @@
   align-items: center;
   padding: 2em;
   z-index: 1000;
+  cursor: pointer;
 }
 
 .action-container > .fab-container:nth-child(n+2) > .fab,
